feat(api): [NAN-793] bulk metadata update api (#2145)
## Describe your changes
Update the set and update metadata endpoints to accept an array of
connection ids. If any invalid connection is passed in at any point in
the array the entire operation is bailed and no metadata is set.

## Issue ticket number and link
NAN-793

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [x] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/docs-v2/spec.yaml
+++ b/docs-v2/spec.yaml
@@ -486,6 +486,130 @@ paths:
                                 properties:
                                     message:
                                         type: string
+    /connection/metadata:
+        post:
+            description: Set custom metadata for the connection or connections. If updating multiple connections pass in an array of connection ids instead of a string.
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            required:
+                                - metadata
+                                - connection_id
+                                - provider_config_key
+                            properties:
+                                connection_id:
+                                    oneOf:
+                                        - type: string
+                                          example: "connection-123"
+                                          description: The connection ID used to set the metadata on.
+                                        - type: array
+                                          items:
+                                              type: string
+                                              example: "connection-123"
+                                          description: The connection IDs used to set the metadata on. If one connection id is invalid in the array the entire operation is aborted with no changes made.
+                                provider_config_key:
+                                    type: string
+                                    description: The integration ID used to create the connection (aka Unique Key).
+                                metadata:
+                                    type: object
+
+            responses:
+                '201':
+                    description: Successfully set the metadata for the connections
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    connection_id:
+                                        oneOf:
+                                            - type: string
+                                              example: "connection-123"
+                                              description: The connection ID used to set the metadata on. Returns an array of connection ids if an array is passed in.
+                                            - type: array
+                                              items:
+                                                  type: string
+                                                  example: "connection-123"
+                                              description: The connection IDs used to set the metadata on. If one connection id is invalid in the array the entire operation is aborted with no changes made.
+                                    provider_config_key:
+                                        type: string
+                                        description: The integration ID used to create the connection (aka Unique Key).
+                                    metadata:
+                                        type: object
+                '400':
+                    description: Invalid request
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+        patch:
+            description: Edit custom metadata for the connection or connections (only overrides specified properties, not the entire metadata). If updating multiple connections pass in an array of connection ids instead of a string.
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            required:
+                                - metadata
+                                - connection_id
+                                - provider_config_key
+                            properties:
+                                connection_id:
+                                    oneOf:
+                                        - type: string
+                                          example: "connection-123"
+                                          description: The connection ID used to update the metadata on. Accepts an array of connection ids as well
+                                        - type: array
+                                          items:
+                                              type: string
+                                              example: "connection-123"
+                                          description: The connection IDs used to update the metadata on. If one connection id is invalid in the array the entire operation is aborted with no changes made.
+                                provider_config_key:
+                                    type: string
+                                    description: The integration ID used to create the connection (aka Unique Key).
+                                metadata:
+                                    type: object
+
+            responses:
+                '200':
+                    description: Successfully updated the metadata for the connections
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    connection_id:
+                                        oneOf:
+                                            - type: string
+                                              example: "connection-123"
+                                              description: The connection ID used to update the metadata on. Returns an array of connection ids if an array is passed in.
+                                            - type: array
+                                              items:
+                                                  type: string
+                                                  example: "connection-123"
+                                              description: The connection IDs used to update the metadata on. If one connection id is invalid in the array the entire operation is aborted with no changes made.
+                                    provider_config_key:
+                                        type: string
+                                        description: The integration ID used to create the connection (aka Unique Key).
+                                    metadata:
+                                        type: object
+                '400':
+                    description: Invalid request
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+
     /connection/{connectionId}/metadata:
         post:
             description: Set custom metadata for the connection.
