--- a/.github/workflows/tests-node-client.yaml
+++ b/.github/workflows/tests-node-client.yaml
@@ -8,7 +8,7 @@ on:
     pull_request:
 
 concurrency:
-    group: pulls/${{ github.event.pull_request.number || github.ref }}
+    group: tests-node-client/${{ github.event.pull_request.number || github.ref }}
     cancel-in-progress: true
 
 jobs:
