--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -22,6 +22,7 @@
         "@nangohq/utils": "file:../utils",
         "@trpc/client": "^10.45.1",
         "@trpc/server": "^10.45.1",
+        "axios": "^1.2.0",
         "connect-timeout": "^1.9.0",
         "dd-trace": "5.2.0",
         "express": "^4.19.2",
