feat(integrations): add support for tremendous

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2250,6 +2250,38 @@ timely:
     proxy:
         base_url: https://api.timelyapp.com
     docs: https://docs.nango.dev/integrations/all/timely
+tremendous:
+    categories:
+        - payment
+    auth_mode: OAUTH2
+    authorization_url: https://api.tremendous.com/oauth/authorize
+    token_url: https://api.tremendous.com/oauth/token
+    scope_separator: ' '
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://api.tremendous.com/api/v2
+    docs: https://docs.nango.dev/integrations/all/tremendous
+tremendous-sandbox:
+    categories:
+        - payment
+    auth_mode: OAUTH2
+    authorization_url: https://testflight.tremendous.com/oauth/authorize
+    token_url: https://testflight.tremendous.com/oauth/token
+    scope_separator: ' '
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://testflight.tremendous.com/api/v2
+    docs: https://docs.nango.dev/integrations/all/tremendous
 trello:
     categories:
         - productivity
