--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -40,6 +40,7 @@
         "@radix-ui/react-dropdown-menu": "2.0.6",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-popover": "1.0.7",
+        "@radix-ui/react-tooltip": "1.0.7",
         "@sentry/react": "7.83.0",
         "@tailwindcss/forms": "0.5.3",
         "@tanstack/react-table": "8.16.0",
@@ -67,6 +68,7 @@
         "react-router-dom": "6.8.2",
         "react-scripts": "5.0.1",
         "react-toastify": "9.1.1",
+        "react-use": "17.5.0",
         "swr": "2.2.5",
         "tailwind-merge": "2.2.1",
         "tailwindcss": "3.2.7",
