optional connectionConfig params in provider URLs
# Conflicts:
#	packages/server/lib/utils/utils.unit.test.ts
#	packages/shared/providers.yaml

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@
 # NANGO_DB_POOL_MIN=<PICK-INT-OR-SKIP>
 # NANGO_DB_POOL_MAX=<PICK-INT-OR-SKIP>
 #
+# RECORDS_DATABASE_URL=${RECORDS_DATABASE_URL:-postgresql://nango:nango@nango-db:5432/nango}
 #
 # - Configure server and worker port (current value is the default for running Nango locally).
 #
