--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -37,6 +37,7 @@
         "@nangohq/frontend": "^0.39.30",
         "@nangohq/server": "file:../server",
         "@nangohq/types": "^0.39.30",
+        "@radix-ui/react-dialog": "1.0.5",
         "@radix-ui/react-dropdown-menu": "2.0.6",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-popover": "1.0.7",
@@ -54,6 +55,7 @@
         "class-variance-authority": "0.5.2",
         "classnames": "2.3.2",
         "clsx": "2.1.0",
+        "cmdk": "1.0.0",
         "cron-parser": "4.8.1",
         "env-cmd": "10.1.0",
         "lodash": "4.17.21",
