--- a/dev/docker-compose.dev.yaml
+++ b/dev/docker-compose.dev.yaml
@@ -50,21 +50,21 @@ services:
         networks:
             - nango
 
-    opensearch:
-        container_name: opensearch
-        image: opensearchproject/opensearch:2.13.0
+    elasticsearch:
+        container_name: elasticsearch
+        image: elasticsearch:8.13.0
         ulimits:
             memlock:
                 soft: -1
                 hard: -1
         volumes:
-            - opensearch-data1:/usr/share/opensearch/data
+            - elasticsearch-data1:/usr/share/elasticsearch/data
         ports:
             - 9500:9200
             - 9600:9300
         environment:
             - discovery.type=single-node
-            - DISABLE_SECURITY_PLUGIN=true
+            - xpack.security.enabled=false
         networks:
             - nango
         deploy:
@@ -76,5 +76,5 @@ networks:
     nango:
 
 volumes:
-    opensearch-data1:
+    elasticsearch-data1:
         driver: local
