--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1901,6 +1901,35 @@ servicem8:
     refresh_params:
         grant_type: refresh_token
     docs: https://docs.nango.dev/integrations/all/servicem8
+signnow:
+    categories:
+        - legal
+    auth_mode: OAUTH2
+    authorization_url: https://app.signnow.com/authorize
+    token_url: https://api.signnow.com/oauth2/token
+    disable_pkce: true
+    token_request_auth_method: basic
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    docs: https://docs.nango.dev/integrations/all/signnow
+signnow-sandbox:
+    categories:
+    auth_mode: OAUTH2
+    authorization_url: https://app-eval.signnow.com/authorize
+    token_url: https://api-eval.signnow.com/oauth2/token
+    disable_pkce: true
+    token_request_auth_method: basic
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    docs: https://docs.nango.dev/integrations/all/signnow
 servicenow:
     categories:
         - productivity
