--- a/.env.example
+++ b/.env.example
@@ -82,9 +82,9 @@ DEFAULT_GITHUB_CLIENT_SECRET=
 
 # ----- Logs
 NANGO_LOGS_ENABLED="false"
-NANGO_LOGS_OS_URL="http://localhost:9500"
-NANGO_LOGS_OS_USER=""
-NANGO_LOGS_OS_PWD=""
+NANGO_LOGS_ES_URL="http://localhost:9500"
+NANGO_LOGS_ES_USER=""
+NANGO_LOGS_ES_PWD=""
 
 # Hosted Auth Configuration
 WORKOS_API_KEY=
