--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -12,6 +12,7 @@
         "start:staging": "env-cmd -f .env.staging npm run start",
         "start:prod": "env-cmd -f .env.prod npm run start",
         "build:hosted": "env-cmd -f .env.hosted npm run build",
+        "build:local": "env-cmd -f .env.local npm run build",
         "build:enterprise": "env-cmd -f .env.enterprise npm run build",
         "build:staging": "env-cmd -f .env.staging npm run build",
         "build:prod": "env-cmd -f .env.prod npm run build"
@@ -37,11 +38,12 @@
         "@nangohq/frontend": "^0.39.30",
         "@nangohq/server": "file:../server",
         "@nangohq/types": "^0.39.30",
+        "@radix-ui/react-dialog": "1.0.5",
         "@radix-ui/react-dropdown-menu": "2.0.6",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-popover": "1.0.7",
         "@radix-ui/react-tooltip": "1.0.7",
-        "@sentry/react": "7.83.0",
+        "@sentry/react": "8.4.0",
         "@tailwindcss/forms": "0.5.3",
         "@tanstack/react-table": "8.16.0",
         "@testing-library/react": "13.4.0",
@@ -54,6 +56,7 @@
         "class-variance-authority": "0.5.2",
         "classnames": "2.3.2",
         "clsx": "2.1.0",
+        "cmdk": "1.0.0",
         "cron-parser": "4.8.1",
         "env-cmd": "10.1.0",
         "lodash": "4.17.21",
