--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,9 +37,10 @@ services:
             - LOG_LEVEL=${LOG_LEVEL:-info}
             - TELEMETRY=${TELEMETRY}
             - NANGO_SERVER_WEBSOCKETS_PATH=${NANGO_SERVER_WEBSOCKETS_PATH}
-            - NANGO_LOGS_OS_URL=${NANGO_LOGS_OS_URL:-http://nango-opensearch:9200}
-            - NANGO_LOGS_OS_USER=${NANGO_LOGS_OS_USER}
-            - NANGO_LOGS_OS_PWD=${NANGO_LOGS_OS_PWD}
+            - NANGO_LOGS_ENABLED=${NANGO_LOGS_ENABLED:-false}
+            - NANGO_LOGS_ES_URL=${NANGO_LOGS_ES_URL:-http://nango-elasticsearch:9200}
+            - NANGO_LOGS_ES_USER=${NANGO_LOGS_ES_USER}
+            - NANGO_LOGS_ES_PWD=${NANGO_LOGS_ES_PWD}
         volumes:
             - './packages/shared/providers.yaml:/usr/nango-server/src/packages/shared/providers.yaml'
         restart: always
@@ -47,7 +48,7 @@ services:
             - '${SERVER_PORT:-3003}:${SERVER_PORT:-3003}'
         depends_on:
             - nango-db
-            - nango-opensearch
+            # - nango-elasticsearch
         networks:
             - nango
 
@@ -58,31 +59,30 @@ services:
             - '6379:6379'
         networks:
             - nango
-
+    #
     # Optional dependency
-    # To not load opensearch, set NANGO_LOGS_OS_URL=false in nango-server and disable this dependency
-    nango-opensearch:
-        image: opensearchproject/opensearch:2.13.0
-        container_name: nango-opensearch
-        ulimits:
-            memlock:
-                soft: -1
-                hard: -1
-        volumes:
-            - opensearch-data1:/usr/share/opensearch/data
-        ports:
-            - 9500:9200
-            - 9600:9300
-        environment:
-            - discovery.type=single-node
-            - DISABLE_SECURITY_PLUGIN=true
-        networks:
-            - nango
+    # To load elasticsearch, set NANGO_LOGS_ENABLED=true in nango-server and uncomment this dependency
+    # nango-elasticsearch:
+    #     image: elasticsearch:8.13.0
+    #     container_name: nango-elasticsearch
+    #     ulimits:
+    #         memlock:
+    #             soft: -1
+    #             hard: -1
+    #     volumes:
+    #         - elasticsearch-data1:/usr/share/elasticsearch/data
+    #     ports:
+    #         - 9500:9200
+    #         - 9600:9300
+    #     environment:
+    #         - discovery.type=single-node
+    #         - xpack.security.enabled=false
+    #     networks:
+    #         - nango
 
 networks:
     nango:
 
-
 volumes:
-    opensearch-data1:
+    elasticsearch-data1:
         driver: local
