--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -58,6 +58,7 @@
         "clsx": "2.1.0",
         "cmdk": "1.0.0",
         "cron-parser": "4.8.1",
+        "date-fns": "3.6.0",
         "env-cmd": "10.1.0",
         "lodash": "4.17.21",
         "ms": "3.0.0-canary.1",
@@ -66,6 +67,7 @@
         "posthog-js": "1.116.2",
         "react": "18.2.0",
         "react-code-blocks": "0.0.9-0",
+        "react-day-picker": "8.10.1",
         "react-dom": "18.2.0",
         "react-helmet": "6.1.0",
         "react-router-dom": "6.8.2",
