--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -42,6 +42,7 @@
         "@radix-ui/react-dropdown-menu": "2.0.6",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-popover": "1.0.7",
+        "@radix-ui/react-scroll-area": "1.0.5",
         "@radix-ui/react-tooltip": "1.0.7",
         "@sentry/react": "8.4.0",
         "@tailwindcss/forms": "0.5.3",
