--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -47,6 +47,7 @@
         "@types/node": "^20.12.2",
         "nodemon": "^3.0.1",
         "typescript": "^5.3.3",
+        "type-fest": "4.14.0",
         "vitest": "0.33.0"
     }
 }
