[nan-981] move types and add getConnectionWeb v1 controller

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -11,6 +11,9 @@
         "url": "git+https://github.com/NangoHQ/nango.git",
         "directory": "packages/utils"
     },
+    "devDependencies": {
+        "axios": "^1.3.4"
+    },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "files": [
         "dist/**/*"
