--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1321,7 +1321,12 @@ linkhut:
 mailgun:
     categories:
         - marketing
-    auth_mode: API_KEY
+    auth_mode: BASIC
+     proxy:
+        base_url: https://${connectionConfig.region}.mailgun.net
+        verification:
+            method: GET
+            endpoint: /v4/domains
     docs: https://docs.nango.dev/integrations/all/mailgun
 mailchimp:
     categories:
