--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -466,6 +466,29 @@ contentstack:
     authorization_url: https://${connectionConfig.subdomain}.contentstack.com/apps/${connectionConfig.appId}/authorize
     token_url: https://${connectionConfig.subdomain}.contentstack.com/apps-api/apps/token
     docs: https://docs.nango.dev/integrations/all/contentstack
+datev:
+    categories:
+        - legal
+        - payroll
+        - hr
+    auth_mode: OAUTH2
+    authorization_url: https://login.datev.de/openid/authorize
+    token_url: https://api.datev.de/token
+    token_request_auth_method: basic
+    scope_seprator: ' '
+    default_scopes:
+        - openid
+    authorization_params:
+        response_type: code id_token
+        response_mode: query
+        nonce: AnotherRandomStringDatev
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://api.datev.de
+    docs: https://docs.nango.dev/integrations/all/datev
 deel:
     categories:
         - hr
