[nan-1051] allow DELETE to have a body

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1163,7 +1163,7 @@ jira:
         audience: api.atlassian.com
         prompt: consent
     connection_configuration:
-        - cloudID
+        - cloudId
         - accountId
     proxy:
         base_url: https://api.atlassian.com
