--- a/packages/orchestrator/package.json
+++ b/packages/orchestrator/package.json
@@ -19,6 +19,7 @@
         "dd-trace": "5.2.0",
         "express": "4.19.2",
         "get-port": "7.1.0",
+        "p-queue": "8.0.1",
         "zod": "3.22.4"
     },
     "devDependencies": {
