--- a/packages/cli/docker/docker-compose.yaml
+++ b/packages/cli/docker/docker-compose.yaml
@@ -74,6 +74,7 @@ services:
             - NANGO_LOGS_ES_URL=${NANGO_LOGS_ES_URL:-http://nango-elasticsearch:9200}
             - NANGO_LOGS_ES_USER=${NANGO_LOGS_ES_USER}
             - NANGO_LOGS_ES_PWD=${NANGO_LOGS_ES_PWD}
+            - ORCHESTRATOR_SERVICE_URL=${ORCHESTRATOR_SERVICE_URL}
         depends_on:
             - nango-db
             - temporal
