fix(pkgs): create kvstore and use it in logs

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "packages/cli",
         "packages/shared",
         "packages/frontend",
+        "packages/kvstore",
         "packages/logs",
         "packages/node-client",
         "packages/records",
