--- a/tsconfig.docker.json
+++ b/tsconfig.docker.json
@@ -11,6 +11,9 @@
             "path": "packages/frontend"
         },
         {
+            "path": "packages/kvstore"
+        },
+        {
             "path": "packages/jobs"
         },
         {
