--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -4,5 +4,10 @@
         "rootDir": "lib",
         "outDir": "dist"
     },
-    "include": ["lib/**/*"]
+    "include": ["lib/**/*"],
+    "references": [
+        {
+            "path": "../types"
+        }
+    ]
 }
