--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "packages/database"
     ],
     "scripts": {
-        "create:migration": "cd packages/database/lib/db && knex migrate:make $1 --esm --knexfile ./knexfile.cjs",
-        "undo:migration": "cd packages/database/lib/db && knex migrate:rollback --esm --knexfile ./knexfile.cjs",
+        "create:migration": "cd packages/database/lib && knex migrate:make $1 --esm --knexfile ./knexfile.cjs",
+        "undo:migration": "cd packages/database/lib && knex migrate:rollback --esm --knexfile ./knexfile.cjs",
         "prettier-format": "prettier --config .prettierrc \"./**/*.{ts,tsx}\" --write",
         "prettier-watch": "onchange './**/*.{ts,tsx}' -- prettier --write {{changed}}",
         "lint": "eslint . --ext .ts,.tsx",
