[nan-1063] add types to reference

--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -4,5 +4,10 @@
         "rootDir": "lib",
         "outDir": "dist"
     },
+    "references": [
+        {
+            "path": "../types"
+        }
+    ],
     "include": ["lib/**/*"]
 }
