--- a/integration-templates/google-mail/nango.yaml
+++ b/integration-templates/google-mail/nango.yaml
@@ -8,6 +8,14 @@ integrations:
                 output: GmailEmail
                 sync_type: incremental
                 endpoint: /google-mail/emails
+        actions:
+            send-email:
+                scopes: send
+                input: GmailEmailInput
+                output: GmailEmailSentOutput
+                endpoint: POST /google-mail/send
+                description: |
+                    Send an Email using Gmail.
 models:
     GmailEmail:
         id: string
@@ -16,4 +24,14 @@ models:
         date: date
         subject: string
         body: string
+        threadId: string
+
+    GmailEmailInput:
+        from: string
+        to: string
+        subject: string
+        body: string
+
+    GmailEmailSentOutput:
+        id: string
         threadId: string
