--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,8 @@
     "typings": "dist/index.d.ts",
     "scripts": {},
     "bundleDependencies": [
-        "@nangohq/utils"
+        "@nangohq/utils",
+        "@nangohq/database"
     ],
     "keywords": [],
     "repository": {
