--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -37,6 +37,8 @@
         "exponential-backoff": "^3.1.1",
         "form-data": "4.0.0",
         "fs-extra": "^11.1.1",
+        "http-proxy-agent": "^7.0.2",
+        "https-proxy-agent": "^7.0.4",
         "human-to-cron": "^0.3.1",
         "ip": "^2.0.1",
         "js-yaml": "^4.1.0",
