[nan-1063] bundle deps for database as well

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,6 +5,9 @@
     "main": "./dist/index.js",
     "module": "./dist/index.js",
     "private": true,
+    "bundleDependencies": [
+        "@nangohq/utils"
+    ],
     "scripts": {
         "build": "rimraf ./dist && tsc"
     },
