feat(integrations): add mailgun API key (#2177)
## Describe your changes
Adds a integration for mailgun, can't proxy requests because the base
URL changes depending on your region.
https://documentation.mailgun.com/docs/mailgun/api-reference/intro/

A boolean connection_metadata that could impact the base URL could work.

---------

Co-authored-by: Samuel Bodin <1637651+bodinsamuel@users.noreply.github.com>
Co-authored-by: Khaliq <khaliqgant@gmail.com>

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1318,6 +1318,16 @@ linkhut:
     proxy:
         base_url: https://api.ln.ht
     docs: https://docs.nango.dev/integrations/all/linkhut
+mailgun:
+    categories:
+        - marketing
+    auth_mode: BASIC
+    proxy:
+        base_url: https://${connectionConfig.region}.mailgun.net
+        verification:
+            method: GET
+            endpoint: /v4/domains
+    docs: https://docs.nango.dev/integrations/all/mailgun
 mailchimp:
     categories:
         - marketing
