feat(server): [nan-981] implement error reporting UI on connection authorization sub notification (#2222)
## Describe your changes
- Adds error notifications to the List connections page with the ability
to filter the connections that have an error or not
- Adds an icon on the Connections sidebar to indicate that there is any
connection with an error
- Adds a banner for a sync if it has a recent error 
- Adds a banner for the authorization tab if it has a connection refresh
error
- removes some of the needless server side formatting logic so that the
connection object is consistent across server and client

Note that I added types to `nangohq/types` so that the new route could
be used. I'll swap out types in another PR to not make this one too
bloated.

## Issue ticket number and link
NAN-981

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -19,7 +19,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Build the docker-compose stack
-              run: docker compose -f ./packages/cli/docker/docker-compose.yaml --project-directory . up -d
+              run: docker compose up -d
 
             - name: Sleep
               uses: jakejarvis/wait-action@master
@@ -39,13 +39,6 @@ jobs:
                   DB=$(docker ps -q -f status=running -f name=^/${CONTAINER_NAME}$)
                   if [ ! "${DB}" ]; then
                     echo "DB container doesn't exist"
-                    exit 1
-                  fi
-
-                  CONTAINER_NAME=nango-jobs
-                  JOBS=$(docker ps -q -f status=running -f name=^/${CONTAINER_NAME}$)
-                  if [ ! "${JOBS}" ]; then
-                    echo "Jobs container doesn't exist"
                     exit 1
                   fi
               shell: bash
