feat(integrations): add support for highlevel white-label

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1081,6 +1081,22 @@ highlevel:
     auth_mode: OAUTH2
     authorization_url: https://marketplace.gohighlevel.com/oauth/chooselocation
     token_url: https://services.leadconnectorhq.com/oauth/token
+    scope_separator: ' '
+    proxy:
+        base_url: https://services.leadconnectorhq.com
+    disable_pkce: true
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    docs: https://docs.nango.dev/integrations/all/highlevel
+highlevel-white-label:
+    categories:
+        - marketing
+    auth_mode: OAUTH2
+    authorization_url: https://marketplace.leadconnectorhq.com/oauth/chooselocation
+    token_url: https://services.leadconnectorhq.com/oauth/token
+    scope_separator: ' '
     proxy:
         base_url: https://services.leadconnectorhq.com
     disable_pkce: true
@@ -1702,6 +1718,7 @@ pingboard:
     proxy:
         base_url: https://app.pingboard.com/api/v2
     authorization_url: https://app.pingboard.com/oauth/token
+    scope_separator: ' '
     authorization_params:
         grant_type: client_credentials
     docs: https://docs.nango.dev/integrations/all/pingboard
