--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -80,6 +80,7 @@
         "@types/parse-link-header": "^2.0.0",
         "@types/uuid": "^9.0.0",
         "typescript": "^5.3.3",
+        "type-fest": "4.14.0",
         "vitest": "0.33.0"
     },
     "files": [
