--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -39,6 +39,8 @@
         "exponential-backoff": "^3.1.1",
         "form-data": "4.0.0",
         "fs-extra": "^11.1.1",
+        "http-proxy-agent": "^7.0.2",
+        "https-proxy-agent": "^7.0.4",
         "human-to-cron": "^0.3.1",
         "ip": "^2.0.1",
         "js-yaml": "^4.1.0",
@@ -78,6 +80,7 @@
         "@types/parse-link-header": "^2.0.0",
         "@types/uuid": "^9.0.0",
         "typescript": "^5.3.3",
+        "type-fest": "4.14.0",
         "vitest": "0.33.0"
     },
     "files": [
