--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "packages/utils",
         "packages/data-ingestion",
         "packages/types",
-        "packages/database"
+        "packages/database",
+        "packages/webhook"
     ],
     "scripts": {
         "create:migration": "cd packages/database/lib && knex migrate:make $1 --esm --knexfile ./knexfile.cjs",
