[nan-1063] webhook failed refresh send

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -50,6 +50,9 @@
             "path": "packages/webapp"
         },
         {
+            "path": "packages/webhooks"
+        },
+        {
             "path": "packages/data-ingestion"
         }
     ]
