feat(integrations): add support for marketo (#2234)
## Describe your changes
- Added configuration for marketo in providers.yaml
- Added marketo to docs-v2.
- Added marketo pages for Supported API groups in mint.json.
- Added marketo SVG file in template-logos folder.
- Consolidate marketo docs pages

## Issue ticket number and link

[EXT-68](https://linear.app/nango/issue/EXT-68/add-support-for-marketo-api)
## Test
The documentation update was reviewed using `npm run docs` and verifying
on localhost.

---------

Co-authored-by: Thomas Bonnin <233326+TBonnin@users.noreply.github.com>

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1338,6 +1338,14 @@ mailchimp:
     authorization_params:
         response_type: code
     docs: https://docs.nango.dev/integrations/all/mailchimp
+marketo:
+    auth_mode: OAUTH2_CC
+    proxy:
+        base_url: https://${connectionConfig.endpointURL}
+    authorization_url: https://${connectionConfig.identityURL}/oauth/token
+    authorization_params:
+        grant_type: client_credentials
+    docs: https://docs.nango.dev/integrations/all/marketo
 microsoft:
     auth_mode: OAUTH2
     authorization_url: https://login.microsoftonline.com/common/oauth2/v2.0/authorize
