--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1161,6 +1161,15 @@ insightly:
             method: GET
             endpoint: /v3.1/Contacts
     docs: https://docs.nango.dev/integrations/all/insightly
+instantly:
+    categories:
+        - marketing
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://api.instantly.ai/
+        headers:
+            api_key: ${apiKey}
+    docs: https://docs.nango.dev/integrations/all/instantly
 instagram:
     categories:
         - marketing
