--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,7 +28,6 @@
         "@babel/types": "^7.22.5",
         "@inquirer/prompts": "^2.3.0",
         "@nangohq/shared": "^0.39.33",
-        "@vercel/ncc": "^0.36.1",
         "ajv": "^8.12.0",
         "ajv-errors": "^3.0.0",
         "axios": "^1.2.0",
@@ -49,6 +48,7 @@
         "promptly": "^3.2.0",
         "semver": "^7.5.2",
         "ts-node": "^10.9.1",
+        "tsup": "^8.1.0",
         "typescript": "^5.3.3",
         "vm": "^0.1.0",
         "zod": "^3.22.4"
