--- a/package.json
+++ b/package.json
@@ -81,9 +81,10 @@
         "lint-staged": "15.2.2",
         "onchange": "^7.1.0",
         "prettier": "3.2.5",
+        "rimraf": "^5.0.1",
         "testcontainers": "^9.12.0",
         "tsx": "^4.6.2",
-        "typescript": "^5.3.3",
+        "typescript": "5.3.3",
         "vitest": "0.33.0",
         "zx": "8.0.2"
     },
