--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -20,7 +20,7 @@
         "tarn": "3.0.2"
     },
     "devDependencies": {
-        "typescript": "^5.3.3",
+        "typescript": "5.3.3",
         "vitest": "0.33.0"
     },
     "files": [
