--- a/packages/persist/package.json
+++ b/packages/persist/package.json
@@ -29,10 +29,9 @@
         "zod-express": "^0.0.8"
     },
     "devDependencies": {
-        "@types/mock-knex": "^0.4.8",
         "@types/node": "20.12.2",
         "node-fetch": "^3.3.2",
-        "typescript": "^5.3.3",
+        "typescript": "5.3.3",
         "vitest": "0.33.0"
     }
 }
