--- a/packages/records/package.json
+++ b/packages/records/package.json
@@ -22,10 +22,10 @@
         "knex": "3.1.0",
         "md5": "2.3.0",
         "pg": "8.11.3",
-        "uuid": "9.0.1",
-        "zod": "3.22.4"
+        "uuid": "9.0.1"
     },
     "devDependencies": {
+        "@types/md5": "^2.3.2",
         "vitest": "0.33.0"
     }
 }
