--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -33,7 +33,7 @@
     "devDependencies": {
         "@types/connect-timeout": "^0.0.39",
         "@types/node": "20.12.2",
-        "typescript": "^5.3.3",
+        "typescript": "5.3.3",
         "vitest": "0.33.0"
     }
 }
