--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,7 +29,7 @@
         "@nangohq/nango-orchestrator": "file:../orchestrator",
         "@nangohq/records": "file:../records",
         "@nangohq/shared": "file:../shared",
-        "@nangohq/types": "^0.39.33",
+        "@nangohq/types": "file:../types",
         "@nangohq/utils": "file:../utils",
         "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
@@ -85,7 +85,7 @@
         "@types/ws": "^8.5.4",
         "get-port": "7.1.0",
         "nodemon": "^3.0.1",
-        "typescript": "^5.3.3",
+        "typescript": "5.3.3",
         "vitest": "0.33.0"
     }
 }
