--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -67,7 +67,7 @@
         "react-dom": "18.3.1",
         "react-helmet": "6.1.0",
         "react-router-dom": "6.23.1",
-        "react-scripts": "^5.0.1",
+        "react-scripts": "5.0.1",
         "react-toastify": "9.1.1",
         "react-use": "17.5.0",
         "swr": "2.2.5",
