--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -64,6 +64,7 @@
         "@sentry/types": "7.112.2",
         "@temporalio/activity": "^1.9.1",
         "@types/fs-extra": "^11.0.1",
+        "@types/ip": "^1.1.0",
         "@types/js-yaml": "^4.0.5",
         "@types/lodash-es": "^4.17.10",
         "@types/node": "20.12.2",
